2009-01-19  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.glade,
	  capplet/nwam_conn_conf_ip_panel.c:
	  Change "Subnet" text to what it really is, the Subnet Mask.
	* common/libnwamui.h, common/libnwamui.c:
	  Add a function to convert a network prefix to a string for display
	  and a function to read the live address/prefix/dhcp information.
	* common/nwamui_enm.c:
	  Correct the base-class of NwamuiEnm to be an NwamuiObject.
	* common/nwamui_ip.c: 
	  For a NwamuiIp, if it's configured for DHCP, don't store values when
	  set is called, and read live system configuration when get is
	  called.
	* common/nwamui_ncp.c: 
	  After speaking with Alan, it makes sense that that UI doesn't show
	  device that don't have a physical counterpart on the system since it
	  doesn't make sense to configure them in the GUI.
	* common/nwamui_ncu.c: 
	  Fix some minor nits.

2009-01-19  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_conf_ip_panel.c: 
	  Change how tables are created (using similar mechanism to that for
	  the status panel) since using the previous mechanism seems to cause
	  an assertion in gtkliststore.
	
2009-01-18  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c: (capplet_compose_nwamui_obj_combo),
	(nwamui_obj_name_cell_cb), (nwam_pref_iface_combo_changed_cb),
	(capplet_compose_nwamui_obj_treeview),
	(capplet_update_nwamui_obj_treeview), (capplet_dialog_run),
	(nwamui_obj_name_cell_edited_cb),
	(capplet_active_mode_renderer_cell_cb), (capplet_name_column_new),
	(capplet_active_mode_column_new), (tree_model_find_object_cb),
	(capplet_model_get_iter), (capplet_combo_get_active),
	(capplet_combo_set_active):
	Added some basic functions to operate combo, tree view and tree model.
	* capplet/capplet-utils.h:
	* capplet/main.c: (main):
	* capplet/nwam_condition_vbox.c: (nwam_pref_init):
	* capplet/nwam_conn_conf_ip_panel.c: (nwam_pref_init),
	(wireless_tab_add_button_clicked_cb),
	(wireless_tab_edit_button_clicked_cb):